# QMODELsteppe

./: README.md  attempt1.py  barefallowSTEPPEQ1.py  barefellow.py  pyproject.toml  Пояснение+Блоксхема2.pdf.pptx
examples/: old_readme.md  run_barefallow.py  run_forest.py
qmodel/: __init__.py  barefallow.py  cli.py  climate.py  forest.py  plotting.py  utils.py
