[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qmodel"
version = "0.2.0"
description = "Bosatta–Ågren Q-model (forest + barefallow) refactored"
requires-python = ">=3.9"
dependencies = ["numpy", "pandas", "matplotlib"]

[tool.setuptools.packages.find]
where = ["."]
